--- a/minimalist/main.css
+++ b/minimalist/main.css
@@ -36,7 +36,6 @@
 header {
     width: 100%;
     height: 120px;
-    /* background-color: red; */
     display: flex;
     align-items: center;
 }
@@ -44,7 +43,6 @@ header {
 nav {
     width: 100%;
     height: 60px;
-    /* background-color: green; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -61,7 +59,6 @@ nav label {
 
 nav ul {
     float: right;
-    /* background-color: yellow; */
     width: 320px;
     display: flex;
     justify-content: space-between;
@@ -104,13 +101,11 @@ nav #check {
 .intro {
     width: 100%;
     height: auto;
-    /* background-color: blue; */
 }
 
 .intro .intro-box {
     width: 100%;
     height: 600px;
-    /* background-color: yellow; */
     position: relative;
 }
 
@@ -186,6 +181,199 @@ nav #check {
 
 
 
+/* ======-started styles of main section-====== */
+main {
+    width: 100%;
+    height: auto;
+    padding-bottom: 100px;
+}
+
+main .main-items {
+    width: 100%;
+    height: auto;
+    display: flex;
+    padding-top: 120px;
+}
+
+main .bitmap1 {
+    width: 540px;
+    height: 600px;
+}
+
+main .bitmap2 {
+    display: none;
+}
+
+main .main-item {
+    width: 350px;
+    height: 600px;
+    margin-left: 110px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    border-top: #dcdcde 1px solid;
+    border-bottom: #dcdcde 1px solid;
+}
+
+main .main-item h3 {
+    font-family: var(--iberra);
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 42px;
+    letter-spacing: -0.3571428656578064px;
+    text-align: left;
+    color: #33323D;
+}
+
+main .main-item p {
+    font-family: var(--public-sans);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: left;
+    color: #33323D;
+}
+
+main .main-item a {
+    width: 200px;
+    height: 48px;
+    border: solid 1px #33323d;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+main .main-item a span {
+    font-family: var(--public-sans);
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14.1px;
+    letter-spacing: 2px;
+    text-align: left;
+    color: #33323D;
+    text-transform: uppercase;
+}
+
+main .main-end {
+    width: 100%;
+    height: 84px;
+    margin-top: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+main .main-end h4 {
+    width: 30%;
+    height: 100%;
+    font-family: var(--iberra);
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 42px;
+    letter-spacing: -0.3571428656578064px;
+    color: #33323D;
+}
+
+main .main-end .line {
+    width: 48%;
+    height: 1px;
+    background-color: #dcdcde;
+}
+
+main .main-end a {
+    width: 160px;
+    height: 48px;
+    border: solid 1px #33323d;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    font-family: var(--public-sans);
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14.1px;
+    letter-spacing: 2px;
+    color: #33323D;
+    text-transform: uppercase;
+}
+
+/* ======/-ended styles of main section-====== */
+
+
+
+
+
+/* ======-started styles of footer section-====== */
+footer {
+    width: 100%;
+    height: 80px;
+    background-color: #33323d;
+    display: flex;
+    align-items: center;
+}
+
+footer .footer-items {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+footer .footer-item1 {
+    width: 420px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+footer .footer-item1 img {
+    width: 60px;
+    height: 32px;
+}
+
+footer .footer-item1 ul {
+    width: 320px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    list-style-type: none;
+}
+
+footer .footer-item1 ul li a {
+    text-decoration: none;
+    font-family: var(--public-sans);
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14.1px;
+    letter-spacing: 2px;
+    text-align: left;
+    color: #ffffff;
+    text-transform: uppercase;
+}
+
+footer .footer-item2 {
+    width: 114px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+footer .footer-item2 img {
+    width: 24px;
+    height: 24px;
+}
+
+/* ======/-ended styles of footer section-====== */
+
+
+
+
+
+
+
+
 
 
 /* ==========================-RWD styles-========================== */
@@ -217,7 +405,60 @@ nav #check {
         height: auto;
     }
 
+    /* main rwd */
+    main {
+        padding: 0 16px;
+        padding-bottom: 80px;
+    }
+
+    main .bitmap1 {
+        width: 440px;
+        height: auto;
+    }
+
+    main .main-end h4 {
+        width: auto;
+    }
+
+    main .main-end .line {
+        width: 28%;
+        height: 1px;
+        background-color: rgb(191, 164, 164);
+        margin: 12px;
+    }
+
+    /* footer rwd */
+    footer {
+        padding: 0 16px;
+    }
 }
+
+
+
+
+@media only screen and (max-width:992px) {
+
+    /* main rwd */
+    main {
+        padding-bottom: 36px;
+    }
+
+    main .bitmap1 {
+        width: 400px;
+        height: auto;
+    }
+
+    main .main-item {
+        width: 420px;
+        height: 600px;
+        margin-left: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+}
+
+
 
 
 @media only screen and (max-width:667px) {
@@ -232,15 +473,16 @@ nav #check {
     }
 
     nav ul {
+        padding: 12px 0;
         background-color: #33323d;
-        width: 40vw;
-        height: 120px;
+        width: 150px;
+        height: 140px;
         position: absolute;
         top: 90px;
         right: 16px;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
         transition: 0.4s ease-in-out;
     }
@@ -258,7 +500,6 @@ nav #check {
     .intro .intro-box {
         width: 100%;
         height: auto;
-        /* background-color: yellow; */
         position: relative;
     }
 
@@ -296,7 +537,54 @@ nav #check {
         left: 0;
         letter-spacing: -0.3571428656578064px;
     }
+
+    /* main rwd */
+    main .main-items {
+        padding-top: 70px;
+    }
+
+    main .bitmap1 {
+        display: none;
+    }
+
+    main .bitmap2 {
+        display: block;
+    }
+
+    main .main-item {
+        justify-content: space-evenly;
+        overflow: hidden;
+        overflow: scroll;
+        padding: 12px;
+    }
+
+    main .main-end {
+        width: 100%;
+        height: auto;
+        margin-top: 120px;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
+
+    main .main-end h4 {
+        text-align: center;
+        padding: 12px 56px;
+        width: 100%;
+    }
+
+    main .main-end .line {
+        display: none;
+    }
+
+    main .main-end a {
+        margin-top: 36px;
+        background-color: #fff;
+    }
+
 }
+
 
 
 @media only screen and (max-width:554px) {
@@ -363,14 +651,109 @@ nav #check {
         right: 10px;
     }
 
+    /* main rwd  */
+    main {
+        padding: 0 10px;
+        padding-bottom: 36px;
+    }
+
+    main .main-items {
+        width: 100%;
+        height: auto;
+        padding-top: 120px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    main .main-item {
+        margin-top: 36px;
+    }
+
+    main .main-items .bitmap1 {
+        display: block;
+        width: 100%;
+        height: auto;
+    }
+
+    main .main-items .bitmap2 {
+        display: none;
+    }
+
+    main .main-item {
+        width: 100%;
+        height: auto;
+        margin-left: 0;
+        padding: 10px;
+    }
+
+
+    /* footer rwd */
+    footer {
+        padding: 0 12px;
+        width: 100%;
+        height: 354px;
+        background-color: #33323d;
+        display: flex;
+        align-items: center;
+    }
+
+    footer .footer-items {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    footer .footer-item1 {
+        width: 100%;
+        height: 230px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    footer .footer-item1 img {
+        width: 60px;
+        height: 32px;
+        display: block;
+    }
+
+    footer .footer-item1 ul {
+        width: 100%;
+        height: 200px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-evenly;
+        list-style-type: none;
+    }
+
+    footer .footer-item1 ul li {
+        display: block;
+    }
+
+    footer .footer-item1 ul li a {
+        text-decoration: none;
+        font-family: var(--public-sans);
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 14.1px;
+        letter-spacing: 2px;
+        text-align: left;
+        color: #ffffff;
+        text-transform: uppercase;
+        display: block;
+    }
 }
+
 
 @media only screen and (max-width:388px) {
     .intro .intro-box_item h2 {
         font-family: var(--iberra);
-        font-size: 16px;
+        font-size: 18px;
         font-weight: 600;
-        line-height: 20px;
+        line-height: 22px;
         margin-top: 6px;
     }
 }
