--- a/minimalist/portofilo.css
+++ b/minimalist/portofilo.css
@@ -9,25 +9,16 @@
 /*--- iberra real nova font ---*/
 @import url('https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&display=swap');
 
-
 :root {
     --public-sans: "Public Sans", sans-serif;
     --iberra: "Ibarra Real Nova", serif;
 }
-
 
 .container {
     width: 1110px;
     height: auto;
     margin: 0 auto;
 }
-
-
-
-
-
-
-
 
 
 
@@ -97,125 +88,57 @@ nav #check {
 
 
 
-/* ======-started styles of intro  section-====== */
-.intro {
-    width: 100%;
-    height: auto;
-}
-
-.intro .intro-box {
-    width: 100%;
-    height: 600px;
-    position: relative;
-}
-
-.intro .intro-box .intro_img1 {
-    width: 100%;
-    height: auto;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 0;
-}
-
-.intro .intro_img1To {
-    display: none;
-}
-
-.intro .intro-box_item {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 445px;
-    height: 357px;
-    background-color: rgb(255, 255, 255);
-}
-
-.intro .intro-box_item h2 {
-    font-family: var(--iberra);
-    font-size: 54px;
-    font-weight: 700;
-    line-height: 54px;
-    letter-spacing: -0.4464285671710968px;
-    text-align: left;
-    color: #33323d;
-    word-spacing: 9px;
-    position: absolute;
-    top: 48px;
-    left: 0;
-}
-
-.intro .intro-box_item button {
-    width: 200px;
-    height: 48px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: none;
-    background-color: #203a4c;
-    cursor: pointer;
-    padding-right: 36px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-}
-
-.intro .intro-box_item button img {
-    width: 48px;
-    height: 48px;
-}
-
-.intro .intro-box_item button p {
-    font-family: var(--public-sans);
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 14.1px;
-    letter-spacing: 2px;
-    text-align: center;
-    color: #ffffff;
-    text-transform: uppercase;
-}
-
-/* ======/-ended styles of intro  section-====== */
-
-
 
 
 /* ======-started styles of main section-====== */
 main {
     width: 100%;
     height: auto;
-    padding-bottom: 100px;
 }
 
 main .main-items {
     width: 100%;
     height: auto;
-    display: flex;
-    padding-top: 120px;
+    padding: 80px 0;
 }
 
-main .bitmap1 {
+main .main-items img {
     width: 540px;
-    height: 600px;
+    height: 500px;
 }
 
-main .bitmap2 {
-    display: none;
-}
-
-main .main-item {
-    width: 350px;
-    height: 600px;
-    margin-left: 110px;
+main .main-items .main-item1, .main-item2, .main-item3, .main-item4 {
+    width: 100%;
+    height: 500px;
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    border-top: #dcdcde 1px solid;
-    border-bottom: #dcdcde 1px solid;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 80px;
 }
 
-main .main-item h3 {
+main .main-items .inner-box {
+    width: 350px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    border-top: 1px solid #dcdcde;
+    border-bottom: 1px solid #dcdcde;
+    padding: 42px 0;
+}
+
+main .main-items .inner-box .inner-box_item {
+    width: 350px;
+    height: 292px;
+}
+
+.inner-box_item {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.inner-box_item h2 {
     font-family: var(--iberra);
     font-size: 40px;
     font-weight: 700;
@@ -225,7 +148,7 @@ main .main-item h3 {
     color: #33323D;
 }
 
-main .main-item p {
+.inner-box_item .inner-box_text {
     font-family: var(--public-sans);
     font-size: 16px;
     font-weight: 400;
@@ -234,17 +157,17 @@ main .main-item p {
     color: #33323D;
 }
 
-main .main-item a {
-    width: 200px;
+.inner-box_item a {
+    width: 175px;
     height: 48px;
-    border: solid 1px #33323d;
+    border: 1px solid #33323d;
     text-decoration: none;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-main .main-item a span {
+.inner-box_item a p {
     font-family: var(--public-sans);
     font-size: 12px;
     font-weight: 400;
@@ -252,7 +175,6 @@ main .main-item a span {
     letter-spacing: 2px;
     text-align: left;
     color: #33323D;
-    text-transform: uppercase;
 }
 
 main .main-end {
@@ -375,7 +297,6 @@ footer .footer-item2 img {
 
 
 
-
 /* ==========================-RWD styles-========================== */
 
 @media only screen and (max-width:1114px) {
@@ -383,26 +304,9 @@ footer .footer-item2 img {
         width: 100%;
     }
 
-
     /* nav rwd */
     nav {
         padding: 0 16px;
-    }
-
-
-    /* intro rwd */
-    .intro {
-        padding: 0 16px;
-    }
-
-    .intro .intro-box {
-        width: 100%;
-        height: 600px;
-    }
-
-    .intro .intro-box img {
-        width: 100%;
-        height: auto;
     }
 
     /* main rwd */
@@ -411,9 +315,34 @@ footer .footer-item2 img {
         padding-bottom: 80px;
     }
 
-    main .bitmap1 {
-        width: 440px;
+
+    /* footer rwd */
+    footer {
+        padding: 0 16px;
+    }
+}
+
+
+@media only screen and (max-width:992px) {
+
+    /* main rwd */
+    main {
+        padding-bottom: 36px;
+    }
+
+    main .main-items img {
+        width: 500px;
         height: auto;
+    }
+
+    main .main-items .main-item1, .main-item2, .main-item3, .main-item4 {
+        width: 100%;
+        height: auto;
+    }
+
+    main .main-items .inner-box {
+        width: 300px;
+        height: 100%;
     }
 
     main .main-end h4 {
@@ -426,39 +355,41 @@ footer .footer-item2 img {
         background-color: rgb(191, 164, 164);
         margin: 12px;
     }
-
-    /* footer rwd */
-    footer {
-        padding: 0 16px;
-    }
 }
 
 
-
-
-@media only screen and (max-width:992px) {
+@media only screen and (max-width:888px) {
 
     /* main rwd */
     main {
         padding-bottom: 36px;
     }
 
-    main .bitmap1 {
-        width: 400px;
+    main .main-items img {
+        width: 410px;
         height: auto;
     }
 
-    main .main-item {
-        width: 420px;
-        height: 600px;
-        margin-left: 10px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
+    main .main-items .inner-box {
+        width: 280px;
+        height: 100%;
     }
+
 }
 
 
+@media only screen and (max-width:800px) {
+
+    /* main rwd */
+    main {
+        padding-bottom: 36px;
+    }
+
+    main .main-items img {
+        width: 340px;
+        height: auto;
+    }
+}
 
 
 @media only screen and (max-width:667px) {
@@ -496,66 +427,31 @@ footer .footer-item2 img {
     }
 
 
-    /* intro rwd*/
-    .intro .intro-box {
-        width: 100%;
-        height: auto;
-        position: relative;
-    }
-
-    .intro .intro-box .intro_img1 {
-        display: none;
-    }
-
-    .intro .intro_img1To {
-        display: block;
-        width: 100%;
-        height: 100%;
-    }
-
-    .intro .intro-box_item {
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 77%;
-        height: 46%;
-        background-color: rgb(255, 255, 255);
-
-    }
-
-    .intro .intro-box_item h2 {
-        font-family: var(--iberra);
-        font-size: 40px;
-        font-weight: 700;
-        line-height: 42px;
-        letter-spacing: -0.4464285671710968px;
-        text-align: left;
-        color: #33323d;
-        word-spacing: 9px;
-        position: absolute;
-        top: 4px;
-        left: 0;
-        letter-spacing: -0.3571428656578064px;
-    }
 
     /* main rwd */
-    main .main-items {
-        padding-top: 70px;
+
+    main .main-items img {
+        width: 100%;
+        height: auto;
     }
 
-    main .bitmap1 {
-        display: none;
+    main .main-item2, .main-item4 {
+        display: flex;
+        flex-direction: column-reverse;
     }
 
-    main .bitmap2 {
-        display: block;
+    main .main-items .inner-box {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        margin-top: 56px;
     }
 
-    main .main-item {
-        justify-content: space-evenly;
-        overflow: hidden;
-        overflow: scroll;
-        padding: 12px;
+    main .main-items .inner-box .inner-box_item {
+        width: 100%;
+        height: 292px;
+        padding: 4px 40px 4px 0;
     }
 
     main .main-end {
@@ -582,7 +478,6 @@ footer .footer-item2 img {
         margin-top: 36px;
         background-color: #fff;
     }
-
 }
 
 
@@ -590,60 +485,8 @@ footer .footer-item2 img {
 @media only screen and (max-width:554px) {
 
     /* nav & intro rwd */
-    nav, .intro {
+    nav {
         padding: 0 10px;
-    }
-
-    .intro .intro-box_item {
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 67%;
-        height: 50%;
-        background-color: rgb(255, 255, 255);
-    }
-
-    .intro .intro-box_item h2 {
-        font-family: var(--iberra);
-        font-size: 26px;
-        font-weight: 600;
-        line-height: 32px;
-        letter-spacing: -0.4464285671710968px;
-        text-align: left;
-        color: #33323d;
-        word-spacing: 2px;
-        margin-top: 12px;
-    }
-
-    .intro .intro-box_item button {
-        width: 140px;
-        height: 36px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border: none;
-        background-color: #203a4c;
-        cursor: pointer;
-        padding-right: 22px;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-    }
-
-    .intro .intro-box_item button img {
-        width: 36px;
-        height: 36px;
-    }
-
-    .intro .intro-box_item button p {
-        font-family: var(--public-sans);
-        font-size: 10px;
-        font-weight: 300;
-        line-height: 10px;
-        letter-spacing: 2px;
-        text-align: center;
-        color: #ffffff;
-        text-transform: uppercase;
     }
 
     nav ul {
@@ -657,35 +500,11 @@ footer .footer-item2 img {
         padding-bottom: 36px;
     }
 
-    main .main-items {
+    main .main-items .inner-box .inner-box_item {
         width: 100%;
-        height: auto;
-        padding-top: 120px;
-        display: flex;
-        flex-wrap: wrap;
+        height: 292px;
+        padding: 4px 0px;
     }
-
-    main .main-item {
-        margin-top: 36px;
-    }
-
-    main .main-items .bitmap1 {
-        display: block;
-        width: 100%;
-        height: auto;
-    }
-
-    main .main-items .bitmap2 {
-        display: none;
-    }
-
-    main .main-item {
-        width: 100%;
-        height: auto;
-        margin-left: 0;
-        padding: 10px;
-    }
-
 
     /* footer rwd */
     footer {
@@ -744,16 +563,5 @@ footer .footer-item2 img {
         color: #ffffff;
         text-transform: uppercase;
         display: block;
-    }
-}
-
-
-@media only screen and (max-width:388px) {
-    .intro .intro-box_item h2 {
-        font-family: var(--iberra);
-        font-size: 18px;
-        font-weight: 600;
-        line-height: 22px;
-        margin-top: 6px;
     }
 }
