--- a/minimalist/contact.css
+++ b/minimalist/contact.css
@@ -9,6 +9,7 @@
 /*--- iberra real nova font ---*/
 @import url('https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&display=swap');
 
+
 :root {
     --public-sans: "Public Sans", sans-serif;
     --iberra: "Ibarra Real Nova", serif;
@@ -56,14 +57,15 @@ nav ul {
     z-index: 1;
 }
 
+
+nav ul li:nth-child(3) a{
+    color:#60b4a2;
+}
+
 nav ul li {
     display: inline-block;
     line-height: 40px;
     margin: 0 5px;
-}
-
-nav ul li:nth-child(2) a{
-    color:#60b4a2;
 }
 
 nav ul li a {
@@ -93,7 +95,6 @@ nav #check {
 
 
 
-
 /* ======-started styles of main section-====== */
 main {
     width: 100%;
@@ -103,130 +104,141 @@ main {
 main .main-items {
     width: 100%;
     height: auto;
-    padding: 80px 0;
+    padding-bottom: 84px;
 }
 
-main .main-items img {
-    width: 540px;
-    height: 500px;
-}
-
-main .main-items .main-item1, .main-item2, .main-item3, .main-item4 {
+main .main-item1 {
     width: 100%;
-    height: 500px;
+    height: auto;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     flex-wrap: wrap;
-    margin-bottom: 80px;
-}
-
-main .main-items .inner-box {
-    width: 350px;
-    height: 100%;
-    display: flex;
-    align-items: center;
     border-top: 1px solid #dcdcde;
-    border-bottom: 1px solid #dcdcde;
-    padding: 42px 0;
+    margin-bottom: 36px;
+    padding: 36px 0;
 }
 
-main .main-items .inner-box .inner-box_item {
-    width: 350px;
-    height: 292px;
-}
-
-.inner-box_item {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-}
-
-.inner-box_item h2 {
+main h2 {
     font-family: var(--iberra);
     font-size: 40px;
     font-weight: 700;
     line-height: 42px;
     letter-spacing: -0.3571428656578064px;
     text-align: left;
-    color: #33323D;
+    color: #33323d;
 }
 
-.inner-box_item .inner-box_text {
+.main-item1 .main-item1_txt {
+    width: 635px;
+    height: 250px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding-right: 24px;
+}
+
+.main-item1 .main-item1_txt p {
     font-family: var(--public-sans);
     font-size: 16px;
     font-weight: 400;
     line-height: 30px;
     text-align: left;
-    color: #33323D;
+    color: #5c5b62;
 }
 
-.inner-box_item a {
-    width: 175px;
-    height: 48px;
-    border: 1px solid #33323d;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.inner-box_item a p {
-    font-family: var(--public-sans);
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 14.1px;
-    letter-spacing: 2px;
-    text-align: left;
-    color: #33323D;
-}
-
-main .main-end {
-    width: 100%;
-    height: 84px;
-    margin-top: 80px;
+.main-item1 .network {
+    width: 104px;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-main .main-end h4 {
-    width: 30%;
-    height: 100%;
-    font-family: var(--iberra);
-    font-size: 40px;
-    font-weight: 700;
-    line-height: 42px;
-    letter-spacing: -0.3571428656578064px;
-    color: #33323D;
+.main-item1 .network img {
+    width: 24px;
+    height: 24px;
 }
 
-main .main-end .line {
-    width: 48%;
-    height: 1px;
-    background-color: #dcdcde;
-}
 
-main .main-end a {
-    width: 160px;
-    height: 48px;
-    border: solid 1px #33323d;
+main .main-item2 {
+    width: 100%;
+    height: auto;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
+    justify-content: space-between;
+    padding: 36px 0;
+    border-top: 1px solid #dcdcde;
+}
+
+main .main-item2 form {
+    width: 635px;
+    height: 450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+main .main-item2 form div {
+    width: 100%;
+    height: 86px;
+    margin-top: 12px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+main .main-item2 form .textArea {
+    width: 100%;
+    height: 134px;
+}
+
+main .main-item2 form div label {
+    margin-bottom: 16px;
+    font-family: var(--public-sans);
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 30px;
+    text-align: left;
+    color: #5c5b62;
+    text-transform: capitalize;
+}
+
+main .main-item2 form div input, textarea {
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    background-color: #e6e6e7;
+}
+
+main .main-item2 form div input {
+    width: 100%;
+    height: 48px;
+    padding: 0 16px 0 16px;
+}
+
+form ::placeholder {
+    color: #9e9ea3;
+}
+
+main .main-item2 button {
+    width: 200px;
+    height: 48px;
+    background-color: #203a4b;
+    border: none;
+    cursor: pointer;
+    margin-top: 24px;
+}
+
+main .main-item2 button p {
     font-family: var(--public-sans);
     font-size: 12px;
     font-weight: 400;
-    line-height: 14px;
+    line-height: 14.1px;
     letter-spacing: 2px;
-    color: #33323D;
-    text-transform: uppercase;
+    text-align: center;
+    color: #ffffff;
 }
 
 /* ======/-ended styles of main section-====== */
-
-
 
 
 
@@ -297,10 +309,6 @@ footer .footer-item2 img {
 
 
 
-
-
-
-
 /* ==========================-RWD styles-========================== */
 
 @media only screen and (max-width:1114px) {
@@ -316,9 +324,7 @@ footer .footer-item2 img {
     /* main rwd */
     main {
         padding: 0 16px;
-        padding-bottom: 80px;
     }
-
 
     /* footer rwd */
     footer {
@@ -327,71 +333,31 @@ footer .footer-item2 img {
 }
 
 
-@media only screen and (max-width:992px) {
-
-    /* main rwd */
-    main {
-        padding-bottom: 36px;
-    }
-
-    main .main-items img {
-        width: 500px;
-        height: auto;
-    }
-
-    main .main-items .main-item1, .main-item2, .main-item3, .main-item4 {
-        width: 100%;
-        height: auto;
-    }
-
-    main .main-items .inner-box {
-        width: 300px;
-        height: 100%;
-    }
-
-    main .main-end h4 {
-        width: auto;
-    }
-
-    main .main-end .line {
-        width: 28%;
-        height: 1px;
-        background-color: rgb(191, 164, 164);
-        margin: 12px;
-    }
-}
-
-
 @media only screen and (max-width:888px) {
 
     /* main rwd */
-    main {
-        padding-bottom: 36px;
+    main .main-item1, .main-item2 {
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        padding-top: 36px;
+        border-top: 1px solid #dcdcde;
     }
 
-    main .main-items img {
-        width: 410px;
+    .main-item1 .main-item1_txt {
+        width: 65%;
         height: auto;
     }
 
-    main .main-items .inner-box {
-        width: 280px;
-        height: 100%;
-    }
-
-}
-
-
-@media only screen and (max-width:800px) {
-
-    /* main rwd */
-    main {
-        padding-bottom: 36px;
-    }
-
-    main .main-items img {
-        width: 340px;
+    main .main-item2 form {
+        width: 65%;
         height: auto;
+    }
+
+    .main-item1 .main-item1_txt p {
+        margin: 18px 0;
     }
 }
 
@@ -430,65 +396,41 @@ footer .footer-item2 img {
         top: -300px;
     }
 
-
-
     /* main rwd */
-
-    main .main-items img {
+    main .main-item1, .main-item2 {
         width: 100%;
         height: auto;
-    }
-
-    main .main-item2, .main-item4 {
+        /* background-color: yellow; */
         display: flex;
-        flex-direction: column-reverse;
-    }
-
-    main .main-items .inner-box {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        margin-top: 56px;
-    }
-
-    main .main-items .inner-box .inner-box_item {
-        width: 100%;
-        height: 292px;
-        padding: 4px 40px 4px 0;
-    }
-
-    main .main-end {
-        width: 100%;
-        height: auto;
-        margin-top: 120px;
-        display: flex;
+        justify-content: space-between;
         flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
+        padding-top: 36px;
+        border-top: 1px solid #dcdcde;
     }
 
-    main .main-end h4 {
-        text-align: center;
-        padding: 12px 56px;
+    .main-item1 .main-item1_txt {
         width: 100%;
+        height: auto;
     }
 
-    main .main-end .line {
-        display: none;
+    main .main-item2 form {
+        width: 100%;
+        height: auto;
     }
 
-    main .main-end a {
-        margin-top: 36px;
-        background-color: #fff;
+    main h2 {
+        margin-bottom: 24px;
+    }
+
+    main .main-item2 button {
+        margin-top: 24px;
     }
 }
 
 
-
 @media only screen and (max-width:554px) {
 
-    /* nav & intro rwd */
+    /* nav rwd */
     nav {
         padding: 0 10px;
     }
@@ -501,14 +443,8 @@ footer .footer-item2 img {
     /* main rwd  */
     main {
         padding: 0 10px;
-        padding-bottom: 36px;
     }
 
-    main .main-items .inner-box .inner-box_item {
-        width: 100%;
-        height: 292px;
-        padding: 4px 0px;
-    }
 
     /* footer rwd */
     footer {
